# zero

./: .eslintrc.json  .gitignore  README.md  latest.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
src/: api.ts  index.html  settings.html
src-tauri/: Cargo.toml  database.db-backup.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/src/: api.rs  application.rs  config.rs  database.rs  error.rs  event.rs  handlers.rs  log.rs  main.rs  menu.rs  window.rs
src/components/: AddCreatorsList.tsx  AddList.tsx  AddWorksList.tsx  Button.tsx  CheckboxGroup.tsx  CreatorsTable.tsx  DateRangePicker.tsx  DeleteButton.tsx  Dialog.tsx  Draggable.tsx  Droppable.tsx  Input.tsx  NavButton.tsx  RemoveList.tsx  SearchInput.tsx  Select.tsx  SortableList.tsx  Spinner.tsx  Table.tsx  Tabs.tsx  WorksTable.tsx
src/contexts/: data-context.tsx  navigation-context.tsx
src/data/: api.ts  data.ts  events.ts  storage.ts
src/hooks/: creator-hooks.ts  creators-hook.ts  creators.ts  database-hook.ts  database-hooks.ts  event.ts  format-hooks.ts  formats-hook.ts  formats.ts  hooks.ts  safe-context-hook.ts  session-reducer.ts  session-state.ts  status-hooks.ts  statuses-hook.ts  statuses.ts  tauri-event-hook.ts  type-hooks.ts  types-hook.ts  types.ts  work-hooks.ts  works.ts
src/pages/: App.tsx  index.html  index.ts  index.tsx  library-works.ts  library.ts  main.ts  settings.html  settings.ts  styles.css  styles.scss  test.html  update.ts
src/pages/configuration/: ConfigurationTab.tsx  FormatsTab.tsx  StatusesTab.tsx  TypesTab.tsx
src/pages/main/: MainApp.tsx  index.tsx
src/pages/main/update/: UpdateTab.tsx
src/pages/settings/: ConfigurationTab.tsx  FormatsTab.tsx  SettingsApp.tsx  StatusesTab.tsx  TypesTab.tsx  settings.tsx
src/pages/update/: UpdateTab.tsx
src/utility/: Button.tsx  ConfirmButton.tsx  DeleteButton.tsx  Input.tsx  Tabs.tsx  sortingFunctions.ts
tests/: test.test.ts  utility.ts  zero-test.ts
utility/: confirm-button.ts  tabs.ts
