[package]
name = "zero"
version = "1.0.0"
edition = "2021"
rust-version = "1.73.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "api-all", "dialog", "clipboard", "devtools"] }
log = { version = "0.4.20", features = ["std"] }
rusqlite = { version = "0.29.0", features = ["bundled", "trace", "backup"] }
chrono = "0.4.31"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dev-dependencies]
uuid = { version = "1.5.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
