[package]
name = "zero"
version = "1.0.0"
edition = "2021"
rust-version = "1.73.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-log = { version = "2.0.0", features = ["colored"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-opener = "2.0.0"
log = "0.4.27"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled", "trace", "backup", "functions"] }
chrono = "0.4.41"

[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
